<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menu_refresh"
          android:title=""
          android:checkable="false"
          android:orderInCategory="1"
          app:showAsAction="ifRoom" />

    <item android:id="@+id/menu_connect"
          android:title="@string/menu_connect"
          android:orderInCategory="100"
          app:showAsAction="ifRoom|withText" />

    <item android:id="@+id/menu_disconnect"
          android:title="@string/menu_disconnect"
          android:orderInCategory="101"
          app:showAsAction="ifRoom|withText" />

    <item android:id="@+id/menu_landscape"
        android:title="@string/menu_landscape"
        android:orderInCategory="101"
        android:checkable="true"
        app:showAsAction="ifRoom|withText" />
</menu>
